--- a/Reactjs/Спринт11-1.md
+++ b/Reactjs/Спринт11-1.md
@@ -1431,4 +1431,4 @@ height="4.218055555555556in"}
 А мы более подробно остановимся на React как на наиболее
 распространённом варианте.
 
-[Поехали](Спринт11-2.md).
+[Далее](Спринт11-2.md).
