--- a/Reactjs/Спринт11-2.md
+++ b/Reactjs/Спринт11-2.md
@@ -3583,4 +3583,4 @@ npx lint-staged \#здесь может быть любая команда, ко
 Вы справились со второй темой — невероятно объёмной, но очень важной. Теперь вы сможете эффективно собирать свои проекты, используя подходящие инструменты, а также автоматизировать свою работу. Пора идти дальше — и освоить самое важное из инструмента React.
 
 
-[Поехали](Спринт11-3.md).
+[Далее](Спринт11-3.md).
