--- a/Reactjs/Спринт11-7.md
+++ b/Reactjs/Спринт11-7.md
@@ -8,7 +8,7 @@
 
 Из заготовки -
 
-[frontend-developer-canonicals-blog-customizer\_starter.zip](file:///E:\\Документы\\fa\\Веб-программирование\\реакт\\frontend-developer-canonicals-blog-customizer_starter.zip)
+[frontend-developer-canonicals-blog-customizer_starter.zip](frontend-developer-canonicals-blog-customizer_starter.zip)
 
 **Где работать:** после копирования заготовки в своём репозитории создайте новую ветку с именем review и пишите код в ней, а потом создайте пулл-реквест — о нём в следующем уроке
 
@@ -34,12 +34,12 @@
 
 После этого изучите уже реализованные компоненты в стартер-ките, часть из них относящихся к ui-kit задокументированы в storybook. Чтобы открыть его выполните в консоли команду:
 
-Скопировать код
 
-> BASH
+
+```BASH
 
 npm run storybook
-
+```
 Из этих компонент вам предстоит собрать форму и после этого настроить всю необходимую функциональность.
 
 Сразу расскажем про функциональные требования:
