--- a/Reactjs/Спринт11-1.md
+++ b/Reactjs/Спринт11-1.md
@@ -640,7 +640,7 @@ ______
 
 **Практика1**
 
-[project1-1.zip](project1-1)
+[project1-1](project1-1)
 
 В этом задании ничего делать не нужно! Просто посмотрите на код проекта,
 попробуйте что-нибудь поменять по желанию:
