--- a/Reactjs/Спринт11-3.md
+++ b/Reactjs/Спринт11-3.md
@@ -732,7 +732,7 @@ root.render(
 
 React основан на принципе, что логика рендеринга неразрывно связана с прочей логикой пользовательского интерфейса: обработкой событий, изменением состояния и подготовкой данных к отображению. JSX призван во всём соответствовать этому принципу. На этом способы применения JSX не заканчиваются: ещё больше вы узнаете по мере прохождения курса.
 
-[Практика2](project2.zip)
+[Практика2](project2)
 
 Конвертировать HTML в JSX вы научились, отлично\! Основная прелесть JSX в том, что можно работать динамически в вёрстке с данными.
 
@@ -910,7 +910,7 @@ return (
 
 На этом уроке вы реализовали первый реакт-компонент, поздравляем\!
 
-[Практика3](project3.zip)
+[Практика3](project3)
 
 В уроке был реализован компонент «рецепт». Отойдём немного от кулинарии и реализуем компонент «приветствие».
 
@@ -1396,7 +1396,7 @@ userId: 1112983
 
 React-разработчик применяет эти навыки регулярно, а умение правильно «приготовить» пропсы сильно влияет на качество и надёжность кода. В следующем уроке расскажем о внутреннем состоянии и разберём, как применять его вместе с пропсами.
 
-практика4[project4.zip](project4.zip)
+практика4[project4](project4)
 
 Урок подошёл к концу, а значит, самое время попрактиковаться.
 
@@ -2026,7 +2026,7 @@ return (
 
 Списки — довольно частое явление во фронтенде: список чатов, список товаров в корзине, список ингредиентов. React умеет их эффективно перерисовывать, но для этого ему нужно помогать, используя key.
 
-[Практика6](project6.zip)
+[Практика6](project6)
 
 Давайте вернёмся в школу и посмотрим, какие учебники сейчас актуальны =)
 
@@ -2162,7 +2162,7 @@ return (
 
   - общедоступные поля класса.
 
-[Практика7](project7.zip)
+[Практика7](project7)
 
 В этом задании есть кнопка, которая много знает. Ваша задача — не дать ей проговориться.
 
@@ -2354,7 +2354,7 @@ return (
 ```
 Мы рассмотрели различные варианты стилизации компонентов, впереди нас ждут знания о css-модулях и конечно, много практики.
 
-[Проект8](project8.zip)
+[Проект8](project8)
 
 Пропал элемент\! Необходимо, чтобы на экране отобразился небольшой красный элемент.
 
