--- a/Reactjs/Спринт11-4.md
+++ b/Reactjs/Спринт11-4.md
@@ -312,7 +312,7 @@ setCount(prevCount => prevCount + 1);
 
 Вы познакомились с хуком useState, который позволяет наделять функциональные компоненты собственным состоянием. При использовании этого хука со сложными объектами необходимо помнить об особенностях мутации таких объектов, чтобы не столкнуться с трудными для отладки ошибками.
 
-[Практика4-2](project42.zip)
+[Практика4-2](project42)
 
 Перед вами функциональный компонент, отображающий на странице кнопку. Текст на кнопке показывает значение счетчика. Сейчас счетчик всегда равен нулю. Нужно сделать так, чтобы при нажатии на кнопку значение счетчика увеличивалось на единицу, и текст на кнопке обновлялся соответствующим образом.
 
@@ -522,7 +522,7 @@ controller.abort();
 
 Использование большого количества хуков useEffect с различными зависимостями в одном компоненте — признак плохого кода. Логику работы компонента, распределённую по этим хукам, будет очень сложно воспринимать и прослеживать.
 
-[Проект43](project43.zip)
+[Проект43](project43)
 
 Перед вами компонент, отображающий электронные часы. Необходимо сделать так, чтобы время на часах обновлялось каждую секунду.
 
@@ -726,7 +726,7 @@ ref={isLast ? scrollTo : undefined}
 
 Если нужно сохранять какие-то данные между перерендерами функционального компонента и при этом иметь возможность изменять их напрямую, не вызывая при этом перерисовки компонента.
 
-[Проект44](project44.zip)
+[Проект44](project44)
 
 На экране простой компонент: заголовок с текстом «Я меняю свой цвет» и кнопка «Изменить цвет». Необходимо сделать так, чтобы при нажатии на кнопку фон заголовка менялся на золотой (gold).
 
@@ -1336,7 +1336,7 @@ onChange={handleInputChange("email")}
 
 Работаете с простой формой, в которой не требуется немедленно реагировать на изменения в полях ввода.
 
-[Проект45](project45.zip)
+[Проект45](project45)
 
 Перед вами компонент, отображающий форму с полем ввода имени пользователя и кнопкой отправки данных формы. Необходимо сделать поле ввода имени пользователя управляемым компонентом. А ещё дописать обработчики событий изменения значения в поле ввода и отправки формы так, чтобы при нажатии на кнопку введённое в поле имя пользователя выводилось в консоль.
 
@@ -1772,7 +1772,7 @@ content: (
 ```
 Мы рассмотрели, как поднимать общее состояние в родительский компонент. А также как наиболее эффективно решать проблему передачи некоторых пропсов через компоненты, которые не нуждаются в них, на множество уровней вниз (**Props Drilling**).
 
-[Проект46](project46.zip)
+[Проект46](project46)
 
 В этом задании вы потренируетесь поднимать общее состояние в родительский компонент. В коде представлена заготовка конвертера температуры.
 
@@ -1916,7 +1916,7 @@ useLayoutEffect применяет анимацию после того, как 
 
 Хук useLayoutEffect может помочь нам настроить внешний вид или расположение DOM-элементов перед их отрисовкой и избежать при этом нежелательных эффектов и мерцаний после отображения страницы в браузере.
 
-[Проект47](project47.zip)
+[Проект47](project47)
 
 Перед вами кнопка с надписью «Показать всплывающую подсказку». При нажатии на эту кнопку происходит отображение всплывающей подсказки с текстом. При этом заметно мерцание: кнопка как бы перемещается из верхнего левого угла в нужное место. Чтобы этот эффект был более нагляден, в коде сделана искусственная задержка при отображении компонента Tooltip. В общем случае наличие и скорость мерцания зависит от используемого браузера, операционной системы и производительности компьютера.
 
@@ -2044,7 +2044,7 @@ cb()
 
 Если посмотреть на кастомный хук useLocalStorage, поначалу можно сказать, что его код занимает не так уж и много строк и их вполне можно разместить в самом компоненте. Но, глядя на такой компонент, легко представить себе, что логика сохранения стейта в локальном хранилище с большой вероятностью может потребоваться и в других компонентах и проектах. А если мы вынесем эту логику из компонента в хук и дадим ему описательное имя, то использование этого хука даже в одном компоненте сделает код гораздо красивее и удобнее.
 
-[Проект48](project48.zip)
+[Проект48](project48)
 
 В этом задании вы потренируетесь писать кастомные хуки. Перед вами компонент c кнопкой, при нажатии на которую будет показываться и скрываться блок текста. Такая функциональность показа/скрытия контента на странице безусловно может пригодиться в разных компонентах и проектах. Давайте вынесем ее в отдельный хук.
 
