--- a/Reactjs/Спринт11-5.md
+++ b/Reactjs/Спринт11-5.md
@@ -367,7 +367,7 @@ return (
 
 Важно понимать сценарии, в которых каждый из подходов является более предпочтительным, и умело применять их для решения конкретных задач разработки.
 
-[Проект51](project51.zip)
+[Проект51](project51)
 
 Перед вами классовый компонент App, который отображает на экране кнопку. При нажатии на кнопку происходит инкремент счётчика и новое значение счётчика отображается на кнопке. В зависимости от того, чётным или нечётным является значение счётчика, меняется цвет текста на кнопке.
 
@@ -773,7 +773,7 @@ this.setOffset
 
 В функциональных компонентах вы можете использовать хуки, такие как useLayoutEffect, useEffect, чтобы использовать методы жизненного цикла. Подробнее об этом — в следующем уроке.
 
-[project52.zip](project52.zip)
+[project52](project52)
 
 Перед вами классовый компонент, отображающий электронные часы, время на которых должно обновляться каждую секунду.
 
@@ -1469,7 +1469,7 @@ Make a mistake
 
 Эти два способа удобно использовать вместе: Error boundary применить для отлова ошибок рендеринга, а в try...catch обернуть любые другие уязвимые места в коде.
 
-[project55.zip](project55.zip)
+[project55](project55)
 
 В этом задании вы потренируетесь обрабатывать ошибки, которые могут возникать при рендеринге компонентов.
 
