--- a/Reactjs/Спринт11-6.md
+++ b/Reactjs/Спринт11-6.md
@@ -1052,7 +1052,7 @@ exclude: "\*\*/node_modules/**/\*",
 
 CSS-модули — классный инструмент. Он добавляет к именам классов хеш, что делает их уникальными и исключает пересечение. Также решается проблема связности, а значит, используемые (и неиспользуемые) CSS-классы можно строго контролировать линтером. Это поможет обнаружить проблемы со стилями ещё до того, как они будут замечены в интерфейсе\!
 
-[project63.zip](project63.zip)
+[project63](project63)
 
 Перед вами небольшой проект — приложение, отображающее фотографии в виде табличной сетки. Для каждой фотографии также отображается её название, если оно есть, и её автор.
 
