--- a/Reactjs/Спринт11-7.md
+++ b/Reactjs/Спринт11-7.md
@@ -8,7 +8,7 @@
 
 Из заготовки -
 
-[frontend-developer-canonicals-blog-customizer_starter.zip](frontend-developer-canonicals-blog-customizer_starter.zip)
+[frontend-developer-canonicals-blog-customizer_starter](frontend-developer-canonicals-blog-customizer_starter)
 
 **Где работать:** после копирования заготовки в своём репозитории создайте новую ветку с именем review и пишите код в ней, а потом создайте пулл-реквест — о нём в следующем уроке
 
@@ -18,7 +18,7 @@
 
 ![](img11-7/media/image1.png)
 
-У вас есть [<span class="underline">заготовка проекта</span>](frontend-developer-canonicals-blog-customizer_starter.zip): готовая вёрстка страницы блога и самой панели, уже разделенная на компоненты. Вам предстоит добавить в компоненты состояния и обработчики событий, корректно передать данные между компонентами.
+У вас есть [<span class="underline">заготовка проекта</span>](frontend-developer-canonicals-blog-customizer_starter): готовая вёрстка страницы блога и самой панели, уже разделенная на компоненты. Вам предстоит добавить в компоненты состояния и обработчики событий, корректно передать данные между компонентами.
 
 Начнем по порядку, с выделения компонент.
 
